# dlio_benchmark

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  fast-ci.yml  integration.yml
dlio_benchmark/: __init__.py  main.py  postprocessor.py
dlio_benchmark/checkpointing/: checkpointing_factory.py  pytorch_checkpointing.py  pytorch_obj_store_checkpointing.py  simple_streaming_checkpointing.py  tf_checkpointing.py
dlio_benchmark/common/: enumerations.py
dlio_benchmark/data_generator/: csv_generator.py  data_generator.py  generator_factory.py  hdf5_generator.py  indexed_binary_generator.py  jpeg_generator.py  npy_generator.py  npz_generator.py  parquet_generator.py  png_generator.py  synthetic_generator.py  tf_generator.py
dlio_benchmark/data_loader/: torch_data_loader.py
dlio_benchmark/framework/: tf_framework.py
dlio_benchmark/reader/: _local_fs_iterable_mixin.py  _s3_iterable_mixin.py  hdf5_reader.py  (+16 more)
docs/: AIStore_Analysis.md  DLIO-Object-Storage_Analysis.md  DLIO_IO_Issues-Executive_Summary_2026-03-28.md  DLIO_IO_Issues-Proposal_2026-03-28.md  DLIO_PR_Plan_2026-04-10.md  DLRM-Parquet-S3-Throughput-Analysis.md  data_generator_analysis.md
tests/: conftest.py  dlio_ai_logging_test.py  dlio_aistore_benchmark_test.py  dlio_benchmark_test.py  dlio_dataset_dimension_test.py  dlio_s3_benchmark_test.py  dlrm-s3dlio-file.yaml  dlrm-s3dlio-s3.yaml  test_data_generator_improvements.py  test_fast_ci.py  test_remaining_issues.py  test_s3dlio_object_store.py  test_virtual_index_map.py
(+15 files in other folders)
